--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Soft Engineering Messanger</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_chats">Чаты</string>
+    <string name="title_contacts">Контакты</string>
+    <string name="title_profile">Профиль</string>
+    <string name="title_register">Регистрация</string>
+    <string name="title_login">Вход</string>
+    <string name="register_button_text">Зарегистрироваться</string>
+    <string name="register_login_hint">Логин</string>
+    <string name="register_password_hint">Пароль</string>
+    <string name="login_button_text">Войти</string>
+    <string name="login_login_hint">Логин</string>
+    <string name="login_password_hint">Пароль</string>
+    <string name="login_under_text">Еще не зарегистрирован?</string>
 </resources>
